[package]
name = "userlib"
version = "0.1.0"
edition = "2021"

[features]
default = ["startup", "panic-messages"]

# Provides the `_start` startup routine that sets up the C/Rust runtime
# environment (initializing `.data`, zeroing `.bss`) and calls the task's
# `main`. This is enabled by default and is what most tasks want. Disable it if
# the task (or another crate) needs to provide its own `_start` and entry
# sequence.
startup = []

# Panic handling. These three features select which `panic_handler` userlib
# registers. They are mutually exclusive: enabling more than one is a compile
# error. If none are enabled, userlib registers no `panic_handler`, leaving the
# task (or another crate) to provide its own.

# Registers the full panic handler, which formats the panic message along with
# its file and line and reports them to the supervisor. This is the default.
panic-messages = []

# Registers a minimal panic handler that reports the fixed string "PANIC"
# instead of the real message. This omits the message-formatting machinery
# (integer formatting, Display/Debug impls, etc. unless used elsewhere), saving
# a lot of flash, at the cost of debuggability.
panic-no-messages = []

# Disallows panics entirely: any panic! that the compiler cannot prove
# unreachable becomes a link-time error. No runtime panic handler is involved,
# so the message-formatting features have nothing to act on.
panic-never = []

[dependencies]
bitflags = "2.6.0"
cfg-if = "1.0.0"

[target."thumbv8m.main-none-eabihf".dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[target.thumbv7em-none-eabihf.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[target.thumbv6m-none-eabi.dependencies]
cortex-m = {version = "0.7", features = ["inline-asm"]}

[lib]
test = false
bench = false
doctest = false
